--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=Task Manager
+
+#H2 DB Config
+
+spring.datasource.url=jdbc:h2:mem:taskmanagerdb
+spring.datasource.driverClassName=org.h2.Driver
+springdatasource.username=sa
+spring.datasource.password=password
+spring.h2.console.enabled=true
+spring.jpa.hibernate.ddl-auto=update
