--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,22 @@
 			<artifactId>jackson-databind</artifactId>
 			<version>2.14.1</version>  <!-- Use a versão mais recente -->
 		</dependency>
+		<dependency>
+			<groupId>com.google.api-client</groupId>
+			<artifactId>google-api-client</artifactId>
+			<version>1.34.1</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.apis</groupId>
+			<artifactId>google-api-services-drive</artifactId>
+			<version>v3-rev20230822-2.0.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.oauth-client</groupId>
+			<artifactId>google-oauth-client-jetty</artifactId>
+			<version>1.34.1</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
